--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>POVERNOR GARSON</h1>
-<p>Hi, I'm a hillbilly idiot who doesn't know how to povern a state.</p>
+<h1>Pi Bots</h1>
+<p>Hi, I'm learning how to make Pi Bots for twitter.</p>
 </body>
 </html>
